Fix button Alignment

--- a/src/components/Calculator.css
+++ b/src/components/Calculator.css
@@ -46,5 +46,5 @@ button:hover {
 }
 
 .button.zero-button {
-  width: 9rem;
+  width: 8.75rem;
 }
